@@ -58,7 +58,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <spark.version>1.3.1</spark.version>
+    <spark.version>1.5.0</spark.version>
     <hadoop.version>2.6.0</hadoop.version>
     <scala.macros.version>2.0.1</scala.macros.version>
     <java.version>1.6</java.version>
@@ -106,12 +106,6 @@
       <dependency>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-core_${scala.binary.version}</artifactId>
-        <version>${spark.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.spark</groupId>
-        <artifactId>spark-graphx_${scala.binary.version}</artifactId>
         <version>${spark.version}</version>
         <scope>provided</scope>
       </dependency>
@@ -431,10 +425,10 @@
           <artifactId>scalatest-maven-plugin</artifactId>
           <version>1.0</version>
           <configuration>
-            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+            <reportsDirectory>${project.build.directory}/scalatest-reports</reportsDirectory>
             <junitxml>.</junitxml>
-            <filereports>${project.build.directory}/ToonaTestSuite.txt</filereports>
-            <argLine>-Xmx3g -XX:MaxPermSize=${MaxPermGen} -XX:ReservedCodeCacheSize=512m</argLine>
+            <filereports>ToonaTestSuite.txt</filereports>
+            <argLine>-Xmx3g -XX:ReservedCodeCacheSize=512m</argLine>
             <stderr/>
             <environmentVariables>
               <!--
